--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <title>Rock Paper Sizzors</title>
 </head>
 <body>
+    <div class="game-container">
+        <div class="user">
+            <button>Rock</button>
+            <button>Paper</button>
+            <button>Sizzors</button>
+        </div>
+        <div class="computer">
+        </div>
+    </div>
+    <div class="results">Results</div>
 </body>
-<script src="scripts.js"></script>
+<script src="script.js"></script>
 </html>
