--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         </div>
     </div>
     <div class="results">Results</div>
+    <div class="previous">Previous Games</div>
 </body>
 <script src="script.js"></script>
 </html>
